# youtube_time_tracking

./: Info.plist  README.md  appveyor.yml  cx_freeze_setup.py  icon.icns  requirements.txt  setup.cfg  setup.py  yttt.desktop  yttt.py  yttt_qt.py
samples/: watch-history.json
yttt/: __init__.py  cli.py  gui.py
