[metadata]
name = yttt
version = 0.1
author = Itsupera
author_email = itsupera@gmail.com
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url =https://github.com/itsupera/youtube_time_tracking
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Environment :: X11 Applications :: Qt

[options]
package_dir =
packages = find:
python_requires = >=3.8
install_requires =
    youtube-dl>=2021.6.6
    typer>=0.3.2,<1
    pyqt5>=5.15,<6

[options.entry_points]
console_scripts =
    yttt = yttt.cli:main

[options.data_files]
data =
    icon.png
    yttt.desktop
